<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MAAAD</string>
    <string name="app_version_build">Build : Build-1.0</string>
    <string name="app_version_name">Versi : 1.0</string>
    <string name="author_email">Author email : dikisatria10@gmail.com</string>
	<string name="maaad_web_name">MAAaD</string>
    <string name="action_about">About</string>
	<string name="action_back">Back</string>
	<string name="web">Official Forum</string>
	<string name="group">Facebook Group</string>
	<string name="author">Author Profil</string>
	<string name="oke">Oke</string>
	<string name="cancel">Cancel</string>
	<string name="home">Home</string>
	<string name="no_conectivity">Tidak ada koneksi internet</string>
	<string name="tray__authority">Tidak ada koneksi internet</string>
    <string-array name="item_array">
        <item>Jump to Top\u0020 &#8593;</item>
        <item>User CP</item>
        <item>Home Index</item>
        <item>Portal</item>
        <item>Member List</item>
        <item>Calendar</item>
        <item>Help</item>
        <item>Search</item>
		<item>App Settings</item>
    </string-array>
	<string name="title_activity_settings">Settings</string>
	<string name="image_chooser">Image Chooser</string>
	<string name="preference_category1">Pengaturan</string>
	<string name="progress_bar">Enable Progressbar</string>
	<string name="applying_changes">Applying changes</string>
	<string name="clear_cache">Clear cache</string>
    <string name="clear_cache_description">Clear app cache. It will also log you out.</string>
	<string name="drawer_pos">Sliding menu position &#8635;</string>
    <string name="drawer_pos_description">Menu is %s side of the screen.</string>
	<string-array name="drawerPosTitles">
        <item>on the left</item>
        <item>on the right</item>
    </string-array>

</resources>
