<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category1">

        <CheckBoxPreference
            android:key="progress_bar"
            android:title="@string/progress_bar"
            android:defaultValue="true"/>
<ListPreference
            android:title="@string/drawer_pos"
            android:summary="@string/drawer_pos_description"
            android:key="drawer_pos"
            android:defaultValue="0"
            android:entries="@array/drawerPosTitles"
            android:entryValues="@array/drawerPosValues"/>
<Preference
            android:key="clear_cache"
            android:title="@string/clear_cache"
            android:summary="@string/clear_cache_description"/>
    </PreferenceCategory>

</PreferenceScreen>